Added Sugar, Honey, Sweet Berry and Blueberry Crêpes

--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -870,8 +870,12 @@
 	"item.mubble.wheat_flour": "Weizenmehl",
 	"item.mubble.caramel_cube": "Karamellwürfel",
 	"item.mubble.crepe": "Krepp",
+	"//item.mubble.sugar_crepe": "Sugar Crêpe",
 	"item.mubble.chocolate_crepe": "Schokoladenkrepp",
 	"item.mubble.caramel_crepe": "Karamellkrepp",
+	"//item.mubble.honey_crepe": "Honey Crêpe",
+	"//item.mubble.sweet_berry_crepe": "Sweet Berry Crêpe",
+	"//item.mubble.blueberry_crepe": "Blueberry Crêpe",
 	"item.mubble.candy_cane": "Zuckerstange",
 	"item.mubble.burger": "Burger",
 	"item.mubble.tomato": "Tomate",
