--- a/src/main/resources/assets/mubble/lang/en_ud.json
+++ b/src/main/resources/assets/mubble/lang/en_ud.json
@@ -870,8 +870,12 @@
 	"item.mubble.wheat_flour": "ɹnolℲ ʇɐǝɥM",
 	"item.mubble.caramel_cube": "ǝqnƆ lǝɯɐɹɐƆ",
 	"item.mubble.crepe": "ǝdêɹƆ",
+	"//item.mubble.sugar_crepe": "Sugar Crêpe",
 	"item.mubble.chocolate_crepe": "ǝdêɹƆ ǝʇɐloɔoɥƆ",
 	"item.mubble.caramel_crepe": "ǝdêɹƆ lǝɯɐɹɐƆ",
+	"//item.mubble.honey_crepe": "Honey Crêpe",
+	"//item.mubble.sweet_berry_crepe": "Sweet Berry Crêpe",
+	"//item.mubble.blueberry_crepe": "Blueberry Crêpe",
 	"item.mubble.candy_cane": "ǝuɐƆ ʎpuɐƆ",
 	"item.mubble.burger": "ɹǝƃɹnq",
 	"item.mubble.tomato": "oʇɐɯo┴",
