--- a/src/main/resources/assets/mubble/lang/en_us.json
+++ b/src/main/resources/assets/mubble/lang/en_us.json
@@ -870,8 +870,12 @@
 	"item.mubble.wheat_flour": "Wheat Flour",
 	"item.mubble.caramel_cube": "Caramel Cube",
 	"item.mubble.crepe": "Crêpe",
+	"item.mubble.sugar_crepe": "Sugar Crêpe",
 	"item.mubble.chocolate_crepe": "Chocolate Crêpe",
 	"item.mubble.caramel_crepe": "Caramel Crêpe",
+	"item.mubble.honey_crepe": "Honey Crêpe",
+	"item.mubble.sweet_berry_crepe": "Sweet Berry Crêpe",
+	"item.mubble.blueberry_crepe": "Blueberry Crêpe",
 	"item.mubble.candy_cane": "Candy Cane",
 	"item.mubble.burger": "Burger",
 	"item.mubble.tomato": "Tomato",
