--- a/src/main/resources/assets/mubble/lang/es_es.json
+++ b/src/main/resources/assets/mubble/lang/es_es.json
@@ -870,8 +870,12 @@
 	"item.mubble.wheat_flour": "Harina de trigo",
 	"item.mubble.caramel_cube": "Cubo de caramelo",
 	"item.mubble.crepe": "Crepe",
+	"//item.mubble.sugar_crepe": "Sugar Crêpe",
 	"item.mubble.chocolate_crepe": "Crepe de chocolate",
 	"item.mubble.caramel_crepe": "Crepe de caramelo",
+	"//item.mubble.honey_crepe": "Honey Crêpe",
+	"//item.mubble.sweet_berry_crepe": "Sweet Berry Crêpe",
+	"//item.mubble.blueberry_crepe": "Blueberry Crêpe",
 	"item.mubble.candy_cane": "Bastón de caramelo",
 	"item.mubble.burger": "Hamburguesa",
 	"item.mubble.tomato": "Tomate",
