--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -870,8 +870,12 @@
 	"item.mubble.wheat_flour": "Farine de blé",
 	"item.mubble.caramel_cube": "Cube de caramel",
 	"item.mubble.crepe": "Crêpe",
+	"item.mubble.sugar_crepe": "Crêpe au sucre",
 	"item.mubble.chocolate_crepe": "Crêpe au chocolat",
 	"item.mubble.caramel_crepe": "Crêpe au caramel",
+	"item.mubble.honey_crepe": "Crêpe au miel",
+	"item.mubble.sweet_berry_crepe": "Crêpe aux baies sucrées",
+	"item.mubble.blueberry_crepe": "Crêpe aux myrtilles",
 	"item.mubble.candy_cane": "Sucre d'orge",
 	"item.mubble.burger": "Burger",
 	"item.mubble.tomato": "Tomato",
