--- a/src/main/resources/assets/mubble/lang/lol_us.json
+++ b/src/main/resources/assets/mubble/lang/lol_us.json
@@ -870,8 +870,12 @@
 	"item.mubble.wheat_flour": "wet floor",
 	"item.mubble.caramel_cube": "tiny caraml boii",
 	"item.mubble.crepe": "creeepe",
+	"//item.mubble.sugar_crepe": "Sugar Crêpe",
 	"item.mubble.chocolate_crepe": "creeepe + choco",
 	"item.mubble.caramel_crepe": "creeepe + caraml good",
+	"//item.mubble.honey_crepe": "Honey Crêpe",
+	"//item.mubble.sweet_berry_crepe": "Sweet Berry Crêpe",
+	"//item.mubble.blueberry_crepe": "Blueberry Crêpe",
 	"item.mubble.candy_cane": "chrostmess cen yum",
 	"item.mubble.burger": "burug",
 	"item.mubble.tomato": "tomto",
