--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -870,8 +870,12 @@
 	"item.mubble.wheat_flour": "Tarwemeel",
 	"item.mubble.caramel_cube": "Karamel kubus",
 	"item.mubble.crepe": "Crêpe",
+	"//item.mubble.sugar_crepe": "Sugar Crêpe",
 	"item.mubble.chocolate_crepe": "Chocolade crêpe",
 	"item.mubble.caramel_crepe": "Karamel crêpe",
+	"//item.mubble.honey_crepe": "Honey Crêpe",
+	"//item.mubble.sweet_berry_crepe": "Sweet Berry Crêpe",
+	"//item.mubble.blueberry_crepe": "Blueberry Crêpe",
 	"item.mubble.candy_cane": "Zuurstok",
 	"item.mubble.burger": "Burger",
 	"item.mubble.tomato": "Tomaat",
