--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -870,8 +870,12 @@
 	"item.mubble.wheat_flour": "Farinha de Trigo",
 	"item.mubble.caramel_cube": "Cubo de Caramelo",
 	"item.mubble.crepe": "Crepe",
+	"//item.mubble.sugar_crepe": "Sugar Crêpe",
 	"item.mubble.chocolate_crepe": "Crepe de Chocolate",
 	"item.mubble.caramel_crepe": "Crepe de Caramelo",
+	"//item.mubble.honey_crepe": "Honey Crêpe",
+	"//item.mubble.sweet_berry_crepe": "Sweet Berry Crêpe",
+	"//item.mubble.blueberry_crepe": "Blueberry Crêpe",
 	"item.mubble.candy_cane": "Bengala Doce",
 	"item.mubble.burger": "Hambúrger",
 	"item.mubble.tomato": "Tomate",
