--- a/src/main/resources/assets/mubble/lang/zh_cn.json
+++ b/src/main/resources/assets/mubble/lang/zh_cn.json
@@ -870,8 +870,12 @@
 	"item.mubble.wheat_flour": "小麦面粉",
 	"item.mubble.caramel_cube": "焦糖块",
 	"item.mubble.crepe": "可丽饼",
+	"//item.mubble.sugar_crepe": "Sugar Crêpe",
 	"item.mubble.chocolate_crepe": "巧克力可丽饼",
 	"item.mubble.caramel_crepe": "焦糖可丽饼",
+	"//item.mubble.honey_crepe": "Honey Crêpe",
+	"//item.mubble.sweet_berry_crepe": "Sweet Berry Crêpe",
+	"//item.mubble.blueberry_crepe": "Blueberry Crêpe",
 	"item.mubble.candy_cane": "拐杖糖",
 	"//item.mubble.burger": "<newline>",
 	"//item.mubble.tomato": "<newline>",
