Added the other Ground Blocks (NSMBU)

--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -576,7 +576,7 @@
 	"block.mubble.smb_night_airship_ground_block": "Bloc de sol (SMB - Forteresse volante de nuit)",
 	"block.mubble.smb_castle_ground_block": "Bloc de sol (SMB - Château)",
 	"block.mubble.smb_desert_ground_block": "Bloc de sol (SMB - Désert)",
-	"block.mubble.smb_forest_ground_block": "Bloc de sol (SMB - Forest)",
+	"block.mubble.smb_forest_ground_block": "Bloc de sol (SMB - Forêt)",
 	"block.mubble.smb_snow_ground_block": "Bloc de sol (SMB - Neige)",
 	"block.mubble.smb_night_snow_ground_block": "Bloc de sol (SMB - Neige de nuit)",
 	"block.mubble.smb_sky_ground_block": "Bloc de sol (SMB - Ciel)",
@@ -587,7 +587,7 @@
 	"block.mubble.smw_airship_ground_block": "Bloc de sol (SMW - Forteresse volante)",
 	"block.mubble.smw_castle_ground_block": "Bloc de sol (SMW - Château)",
 	"block.mubble.smw_desert_ground_block": "Bloc de sol (SMW - Désert)",
-	"block.mubble.smw_forest_ground_block": "Bloc de sol (SMW - Forest)",
+	"block.mubble.smw_forest_ground_block": "Bloc de sol (SMW - Forêt)",
 	"block.mubble.smw_snow_ground_block": "Bloc de sol (SMW - Neige)",
 	"block.mubble.smw_night_snow_ground_block": "Bloc de sol (SMW - Neige de nuit)",
 	"block.mubble.smw_sky_ground_block": "Bloc de sol (SMW - Ciel)",
@@ -603,13 +603,16 @@
 	"block.mubble.smb3_snow_ground_block": "Bloc de sol (SMB3 - Neige)",
 	"block.mubble.smb3_night_snow_ground_block": "Bloc de sol (SMB3 - Neige de nuit)",
 	"block.mubble.smb3_sky_ground_block": "Bloc de sol (SMB3 - Ciel)",
-	"//block.mubble.nsmbu_ground_ground_block": "Ground Block (NSMBU - Ground)",
-	"//block.mubble.nsmbu_underground_ground_block": "Ground Block (NSMBU - Underground)",
-	"//block.mubble.nsmbu_castle_ground_block": "Ground Block (NSMBU - Castle)",
-	"//block.mubble.nsmbu_desert_ground_block": "Ground Block (NSMBU - Desert)",
-	"//block.mubble.nsmbu_snow_ground_block": "Ground Block (NSMBU - Snow)",
-	"//block.mubble.nsmbu_night_snow_ground_block": "Ground Block (NSMBU - Night Snow)",
-	"//block.mubble.nsmbu_sky_ground_block": "Ground Block (NSMBU - Sky)",
+	"block.mubble.nsmbu_ground_ground_block": "Bloc de sol (NSMBU - Plein air)",
+	"block.mubble.nsmbu_underground_ground_block": "Bloc de sol (NSMBU - Souterrain)",
+	"block.mubble.nsmbu_underwater_ground_block": "Bloc de sol (NSMBU - Aquatique)",
+	"block.mubble.nsmbu_ghost_house_ground_block": "Bloc de sol (NSMBU - Manoir hanté)",
+	"block.mubble.nsmbu_castle_ground_block": "Bloc de sol (NSMBU - Château)",
+	"block.mubble.nsmbu_desert_ground_block": "Bloc de sol (NSMBU - Désert)",
+	"block.mubble.nsmbu_forest_ground_block": "Bloc de sol (NSMBU - Forêt)",
+	"block.mubble.nsmbu_snow_ground_block": "Bloc de sol (NSMBU - Neige)",
+	"block.mubble.nsmbu_night_snow_ground_block": "Bloc de sol (NSMBU - Neige de nuit)",
+	"block.mubble.nsmbu_sky_ground_block": "Bloc de sol (NSMBU - Ciel)",
 	"block.mubble.smb_empty_block": "Bloc vide (SMB)",
 	"block.mubble.smb3_empty_block": "Bloc vide (SMB3)",
 	"block.mubble.smw_empty_block": "Bloc vide (SMW)",
