--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -605,8 +605,11 @@
 	"block.mubble.smb3_sky_ground_block": "Grond blok (SMB3 - Sky)",
 	"//block.mubble.nsmbu_ground_ground_block": "Ground Block (NSMBU - Ground)",
 	"//block.mubble.nsmbu_underground_ground_block": "Ground Block (NSMBU - Underground)",
+	"//block.mubble.nsmbu_underwater_ground_block": "Ground Block (NSMBU - Underwater)",
+	"//block.mubble.nsmbu_ghost_house_ground_block": "Ground Block (NSMBU - Ghost House)",
 	"//block.mubble.nsmbu_castle_ground_block": "Ground Block (NSMBU - Castle)",
 	"//block.mubble.nsmbu_desert_ground_block": "Ground Block (NSMBU - Desert)",
+	"//block.mubble.nsmbu_forest_ground_block": "Ground Block (NSMBU - Forest)",
 	"//block.mubble.nsmbu_snow_ground_block": "Ground Block (NSMBU - Snow)",
 	"//block.mubble.nsmbu_night_snow_ground_block": "Ground Block (NSMBU - Night Snow)",
 	"//block.mubble.nsmbu_sky_ground_block": "Ground Block (NSMBU - Sky)",
