Added Chocolate Cake for my birthday

--- a/src/main/resources/assets/mubble/lang/lol_us.json
+++ b/src/main/resources/assets/mubble/lang/lol_us.json
@@ -525,6 +525,7 @@
 	"block.mubble.salad": "green fud",
 	"//block.mubble.blueberry_bush": "Blueberry Bush",
 	"block.mubble.cheese_block": "cheezy bloc",
+	"//block.mubble.chocolate_cake": "Chocolate Cake",
 	"//block.mubble.minecraft_10th_anniversary_cake": "Minecraft's 10th Anniversary Cake",
 
 	"block.mubble.blue_balloon": "bloo beloon",
