--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -525,6 +525,7 @@
 	"block.mubble.salad": "Salade",
 	"block.mubble.blueberry_bush": "Blauwebessenstruik",
 	"block.mubble.cheese_block": "Kaasblok",
+	"//block.mubble.chocolate_cake": "Chocolate Cake",
 	"block.mubble.minecraft_10th_anniversary_cake": "Minecraft's tiende jubileum's taart",
 
 	"block.mubble.blue_balloon": "Blauwe ballon",
