--- a/src/main/resources/assets/mubble/lang/zh_cn.json
+++ b/src/main/resources/assets/mubble/lang/zh_cn.json
@@ -525,6 +525,7 @@
 	"//block.mubble.salad": "<newline>",
 	"//block.mubble.blueberry_bush": "Blueberry Bush",
 	"//block.mubble.cheese_block": "<newline>",
+	"//block.mubble.chocolate_cake": "Chocolate Cake",
 	"//block.mubble.minecraft_10th_anniversary_cake": "Minecraft's 10th Anniversary Cake",
 
 	"//block.mubble.blue_balloon": "<newline>",
