--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -525,6 +525,7 @@
 	"block.mubble.salad": "Salat",
 	"block.mubble.cheese_block": "Käseblock",
 	"block.mubble.blueberry_bush": "Blaubeerenstrauch",
+	"//block.mubble.chocolate_cake": "Chocolate Cake",
 	"block.mubble.minecraft_10th_anniversary_cake": "Minecrafts Torte zum 10-jährigen Jubiläum",
 
 	"block.mubble.blue_balloon": "Blauer Luftballon",
