--- a/src/main/resources/assets/mubble/lang/en_ud.json
+++ b/src/main/resources/assets/mubble/lang/en_ud.json
@@ -525,6 +525,7 @@
 	"block.mubble.salad": "pɐlɐS",
 	"//block.mubble.blueberry_bush": "Blueberry Bush",
 	"block.mubble.cheese_block": "ʞɔolᗺ ǝsǝǝɥƆ",
+	"//block.mubble.chocolate_cake": "Chocolate Cake",
 	"//block.mubble.minecraft_10th_anniversary_cake": "Minecraft's 10th Anniversary Cake",
 
 	"block.mubble.blue_balloon": "uoollɐq ǝnlq",
