--- a/src/main/resources/assets/mubble/lang/es_es.json
+++ b/src/main/resources/assets/mubble/lang/es_es.json
@@ -525,6 +525,7 @@
 	"block.mubble.salad": "Ensalada",
 	"//block.mubble.blueberry_bush": "Blueberry Bush",
 	"block.mubble.cheese_block": "Bloque de queso",
+	"//block.mubble.chocolate_cake": "Chocolate Cake",
 	"//block.mubble.minecraft_10th_anniversary_cake": "Minecraft's 10th Anniversary Cake",
 
 	"//block.mubble.blue_balloon": "<newline>",
