--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -525,6 +525,7 @@
 	"block.mubble.salad": "Salada",
 	"//block.mubble.blueberry_bush": "Blueberry Bush",
 	"block.mubble.cheese_block": "Bloco de Queijo",
+	"//block.mubble.chocolate_cake": "Chocolate Cake",
 	"//block.mubble.minecraft_10th_anniversary_cake": "Minecraft's 10th Anniversary Cake",
 
 	"block.mubble.blue_balloon": "Balão Azul",
