--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -525,7 +525,7 @@
 	"block.mubble.salad": "Salade",
 	"block.mubble.blueberry_bush": "Blauwebessenstruik",
 	"block.mubble.cheese_block": "Kaasblok",
-	"//block.mubble.chocolate_cake": "Chocolate Cake",
+	"block.mubble.chocolate_cake": "Chocolade taart",
 	"block.mubble.minecraft_10th_anniversary_cake": "Minecraft's tiende jubileum's taart",
 
 	"block.mubble.blue_balloon": "Blauwe ballon",
@@ -547,8 +547,8 @@
 
 	"block.mubble.unstable_stone": "Unstabiel steen",
 	"block.mubble.fluid_tank": "Vloeistoftank",
-	"//block.mubble.placer": "Placer",
-	"//block.mubble.timeswap_table": "Timeswap Table",
+	"block.mubble.placer": "Plaatser",
+	"block.mubble.timeswap_table": "Tijdwisselstaftel",
 
 	"block.mubble.dandelion_pile": "Paardenbloemen hoop",
 	"block.mubble.poppy_pile": "Klaproozen hoop",
@@ -569,51 +569,51 @@
 	"block.mubble.smb3_question_block": "?-blok (SMB3)",
 	"block.mubble.smw_question_block": "?-blok (SMW)",
 	"block.mubble.nsmbu_question_block": "?-blok (NSMBU)",
-	"block.mubble.smb_ground_ground_block": "Grond blok (SMB - Ground)",
-	"block.mubble.smb_underground_ground_block": "Grond blok (SMB - Underground)",
-	"block.mubble.smb_underwater_ground_block": "Grond blok (SMB - Underwater)",
-	"block.mubble.smb_ghost_house_ground_block": "Grond blok (SMB - Ghost House)",
-	"block.mubble.smb_airship_ground_block": "Grond blok (SMB - Airship)",
-	"block.mubble.smb_night_airship_ground_block": "Grond blok (SMB - Night Airship)",
-	"block.mubble.smb_castle_ground_block": "Grond blok (SMB - Castle)",
-	"block.mubble.smb_desert_ground_block": "Grond blok (SMB - Desert)",
-	"block.mubble.smb_forest_ground_block": "Grond blok (SMB - Forest)",
-	"block.mubble.smb_snow_ground_block": "Grond blok (SMB - Snow)",
-	"block.mubble.smb_night_snow_ground_block": "Grond blok (SMB - Night Snow)",
-	"block.mubble.smb_sky_ground_block": "Grond blok (SMB - Sky)",
-	"block.mubble.smw_ground_ground_block": "Grond blok (SMW - Ground)",
-	"block.mubble.smw_underground_ground_block": "Grond blok (SMW - Underground)",
-	"block.mubble.smw_underwater_ground_block": "Grond blok (SMW - Underwater)",
-	"block.mubble.smw_ghost_house_ground_block": "Grond blok (SMW - Ghost House)",
-	"block.mubble.smw_airship_ground_block": "Grond blok (SMW - Airship)",
-	"block.mubble.smw_castle_ground_block": "Grond blok (SMW - Castle)",
-	"block.mubble.smw_desert_ground_block": "Grond blok (SMW - Desert)",
-	"block.mubble.smw_forest_ground_block": "Grond blok (SMW - Forest)",
-	"block.mubble.smw_snow_ground_block": "Grond blok (SMW - Snow)",
-	"block.mubble.smw_night_snow_ground_block": "Grond blok (SMW - Night Snow)",
-	"block.mubble.smw_sky_ground_block": "Grond blok (SMW - Sky)",
-	"block.mubble.smb3_ground_ground_block": "Grond blok (SMB3 - Ground)",
-	"block.mubble.smb3_underground_ground_block": "Grond blok (SMB3 - Underground)",
-	"block.mubble.smb3_underwater_ground_block": "Grond blok (SMB3 - Underwater)",
-	"block.mubble.smb3_ghost_house_ground_block": "Grond blok (SMB3 - Ghost House)",
-	"block.mubble.smb3_airship_ground_block": "Grond blok (SMB3 - Airship)",
-	"block.mubble.smb3_night_airship_ground_block": "Grond blok (SMB3 - Night Airship)",
-	"block.mubble.smb3_castle_ground_block": "Grond blok (SMB3 - Castle)",
-	"block.mubble.smb3_night_castle_ground_block": "Grond blok (SMB3 - Night Castle)",
-	"block.mubble.smb3_desert_ground_block": "Grond blok (SMB3 - Desert)",
-	"block.mubble.smb3_snow_ground_block": "Grond blok (SMB3 - Snow)",
-	"block.mubble.smb3_night_snow_ground_block": "Grond blok (SMB3 - Night Snow)",
-	"block.mubble.smb3_sky_ground_block": "Grond blok (SMB3 - Sky)",
-	"//block.mubble.nsmbu_ground_ground_block": "Ground Block (NSMBU - Ground)",
-	"//block.mubble.nsmbu_underground_ground_block": "Ground Block (NSMBU - Underground)",
-	"//block.mubble.nsmbu_underwater_ground_block": "Ground Block (NSMBU - Underwater)",
-	"//block.mubble.nsmbu_ghost_house_ground_block": "Ground Block (NSMBU - Ghost House)",
-	"//block.mubble.nsmbu_castle_ground_block": "Ground Block (NSMBU - Castle)",
-	"//block.mubble.nsmbu_desert_ground_block": "Ground Block (NSMBU - Desert)",
-	"//block.mubble.nsmbu_forest_ground_block": "Ground Block (NSMBU - Forest)",
-	"//block.mubble.nsmbu_snow_ground_block": "Ground Block (NSMBU - Snow)",
-	"//block.mubble.nsmbu_night_snow_ground_block": "Ground Block (NSMBU - Night Snow)",
-	"//block.mubble.nsmbu_sky_ground_block": "Ground Block (NSMBU - Sky)",
+	"block.mubble.smb_ground_ground_block": "Grond blok (SMB - grond)",
+	"block.mubble.smb_underground_ground_block": "Grond blok (SMB - ondergronds)",
+	"block.mubble.smb_underwater_ground_block": "Grond blok (SMB - onderwater)",
+	"block.mubble.smb_ghost_house_ground_block": "Grond blok (SMB - spookhuis)",
+	"block.mubble.smb_airship_ground_block": "Grond blok (SMB - luchtschip)",
+	"block.mubble.smb_night_airship_ground_block": "Grond blok (SMB - nacht luchtschip)",
+	"block.mubble.smb_castle_ground_block": "Grond blok (SMB - kasteel)",
+	"block.mubble.smb_desert_ground_block": "Grond blok (SMB - woestijn)",
+	"block.mubble.smb_forest_ground_block": "Grond blok (SMB - bos)",
+	"block.mubble.smb_snow_ground_block": "Grond blok (SMB - sneeuw)",
+	"block.mubble.smb_night_snow_ground_block": "Grond blok (SMB - nacht sneeuw)",
+	"block.mubble.smb_sky_ground_block": "Grond blok (SMB - lucht)",
+	"block.mubble.smw_ground_ground_block": "Grond blok (SMW - grond)",
+	"block.mubble.smw_underground_ground_block": "Grond blok (SMW - ondergronds)",
+	"block.mubble.smw_underwater_ground_block": "Grond blok (SMW - onderwater)",
+	"block.mubble.smw_ghost_house_ground_block": "Grond blok (SMW - spookhuis)",
+	"block.mubble.smw_airship_ground_block": "Grond blok (SMW - luchtschip)",
+	"block.mubble.smw_castle_ground_block": "Grond blok (SMW - kasteel)",
+	"block.mubble.smw_desert_ground_block": "Grond blok (SMW - woestijn)",
+	"block.mubble.smw_forest_ground_block": "Grond blok (SMW - bos)",
+	"block.mubble.smw_snow_ground_block": "Grond blok (SMW - sneeuw)",
+	"block.mubble.smw_night_snow_ground_block": "Grond blok (SMW - nacht sneeuw)",
+	"block.mubble.smw_sky_ground_block": "Grond blok (SMW - lucht)",
+	"block.mubble.smb3_ground_ground_block": "Grond blok (SMB3 - grond)",
+	"block.mubble.smb3_underground_ground_block": "Grond blok (SMB3 - ondergronds)",
+	"block.mubble.smb3_underwater_ground_block": "Grond blok (SMB3 - onderwater)",
+	"block.mubble.smb3_ghost_house_ground_block": "Grond blok (SMB3 - spookhuis)",
+	"block.mubble.smb3_airship_ground_block": "Grond blok (SMB3 - luchtschip)",
+	"block.mubble.smb3_night_airship_ground_block": "Grond blok (SMB3 - nacht luchtschip)",
+	"block.mubble.smb3_castle_ground_block": "Grond blok (SMB3 - kasteel)",
+	"block.mubble.smb3_night_castle_ground_block": "Grond blok (SMB3 - nacht kasteel)",
+	"block.mubble.smb3_desert_ground_block": "Grond blok (SMB3 - woestijn)",
+	"block.mubble.smb3_snow_ground_block": "Grond blok (SMB3 - sneeuw)",
+	"block.mubble.smb3_night_snow_ground_block": "Grond blok (SMB3 - nacht sneeuw)",
+	"block.mubble.smb3_sky_ground_block": "Grond blok (SMB3 - lucht)",
+	"block.mubble.nsmbu_ground_ground_block": "Grond blok (NSMBU - grond)",
+	"block.mubble.nsmbu_underground_ground_block": "Grond blok (NSMBU - ondergronds)",
+	"block.mubble.nsmbu_underwater_ground_block": "Grond blok (NSMBU - onderwater)",
+	"block.mubble.nsmbu_ghost_house_ground_block": "Grond blok (NSMBU - spookhuis)",
+	"block.mubble.nsmbu_castle_ground_block": "Grond blok (NSMBU - kasteel)",
+	"block.mubble.nsmbu_desert_ground_block": "Grond blok (NSMBU - woestijn)",
+	"block.mubble.nsmbu_forest_ground_block": "Grond blok (NSMBU - bos)",
+	"block.mubble.nsmbu_snow_ground_block": "Grond blok (NSMBU - sneeuw)",
+	"block.mubble.nsmbu_night_snow_ground_block": "Grond blok (NSMBU - nacht sneeuw)",
+	"block.mubble.nsmbu_sky_ground_block": "Grond blok (NSMBU - lucht)",
 	"block.mubble.smb_empty_block": "Leek blok (SMB)",
 	"block.mubble.smb3_empty_block": "Leek blok (SMB3)",
 	"block.mubble.smw_empty_block": "Leek blok (SMW)",
@@ -623,11 +623,11 @@
 	"block.mubble.smw_rotating_block": "Draaiend blok (SMW)",
 	"block.mubble.nsmbu_rotating_block": "Draaiend blok (NSMBU)",
 	"block.mubble.light_block": "Licht blok",
-	"block.mubble.smb_ground_brick_block": "Bakstenenblok (SMB - Ground)",
-	"block.mubble.smb_underground_brick_block": "Bakstenenblok (SMB - Underground)",
-	"block.mubble.smb_castle_brick_block": "Bakstenenblok (SMB - Castle)",
-	"block.mubble.smb_snow_brick_block": "Bakstenenblok (SMB - Snow)",
-	"block.mubble.smb_night_snow_brick_block": "Bakstenenblok (SMB - Night Snow)",
+	"block.mubble.smb_ground_brick_block": "Bakstenenblok (SMB - grond)",
+	"block.mubble.smb_underground_brick_block": "Bakstenenblok (SMB - ondergronds)",
+	"block.mubble.smb_castle_brick_block": "Bakstenenblok (SMB - kasteel)",
+	"block.mubble.smb_snow_brick_block": "Bakstenenblok (SMB - sneeuw)",
+	"block.mubble.smb_night_snow_brick_block": "Bakstenenblok (SMB - nacht sneeuw)",
 	"block.mubble.smb3_brick_block": "Bakstenenblok (SMB3)",
 	"block.mubble.smw_brick_block": "Bakstenenblok (SMW)",
 	"block.mubble.nsmbu_brick_block": "Bakstenenblok (NSMBU)",
@@ -635,12 +635,12 @@
 	"block.mubble.smb3_golden_brick_block": "Goudebakstenenblok (SMB3)",
 	"block.mubble.smw_golden_brick_block": "Goudebakstenenblok (SMW)",
 	"block.mubble.nsmbu_golden_brick_block": "Goudebakstenenblok (NSMBU)",
-	"block.mubble.smb_ground_hard_block": "Hard blok (SMB - Ground)",
-	"block.mubble.smb_underground_hard_block": "Hard blok (SMB - Underground)",
-	"block.mubble.smb_underwater_hard_block": "Hard blok (SMB - Underwater)",
-	"block.mubble.smb_castle_hard_block": "Hard blok (SMB - Castle)",
-	"block.mubble.smb_snow_hard_block": "Hard blok (SMB - Snow)",
-	"block.mubble.smb_night_snow_hard_block": "Hard blok (SMB - Night Snow)",
+	"block.mubble.smb_ground_hard_block": "Hard blok (SMB - grond)",
+	"block.mubble.smb_underground_hard_block": "Hard blok (SMB - ondergronds)",
+	"block.mubble.smb_underwater_hard_block": "Hard blok (SMB - onderwater)",
+	"block.mubble.smb_castle_hard_block": "Hard blok (SMB - kasteel)",
+	"block.mubble.smb_snow_hard_block": "Hard blok (SMB - sneeuw)",
+	"block.mubble.smb_night_snow_hard_block": "Hard blok (SMB - nacht sneeuw)",
 	"block.mubble.smb3_hard_block": "Hard blok (SMB3)",
 	"block.mubble.smw_stone_hard_block": "Hard blok (SMW - Stone)",
 	"block.mubble.smw_wood_hard_block": "Hard blok (SMW - Wood)",
@@ -818,8 +818,8 @@
 	"block.mubble.old_site_brick_vertical_slab": "Oude bouwstenen verticale plaat",
 	"block.mubble.old_site_brick_wall": "Oude bouwstenen muur",
 	"block.mubble.elder_pebbles": "Oudere keizels",
-	"//block.mubble.dream_block": "Dream Block",
-	"//block.mubble.dream_bedrock": "Dream Bedrock",
+	"block.mubble.dream_block": "Droom blok",
+	"block.mubble.dream_bedrock": "Droom bodemsteen",
 
 
 	"block.mubble.blue_puyo": "Blauwe puyo",
@@ -828,7 +828,7 @@
 	"block.mubble.yellow_puyo": "Gele puyo",
 	"block.mubble.red_puyo": "Rode puyo",
 	"block.mubble.purple_puyo": "Paarse puyo",
-	"//block.mubble.gray_puyo": "Gray Puyo",
+	"block.mubble.gray_puyo": "Grijze puyo",
 	"block.mubble.garbage_puyo": "Afval puyo",
 	"block.mubble.point_puyo": "Punt puyo",
 	"block.mubble.hard_puyo": "Harde puyo",
@@ -881,12 +881,12 @@
 	"item.mubble.wheat_flour": "Tarwemeel",
 	"item.mubble.caramel_cube": "Karamel kubus",
 	"item.mubble.crepe": "Crêpe",
-	"//item.mubble.sugar_crepe": "Sugar Crêpe",
+	"item.mubble.sugar_crepe": "suiker crêpe",
 	"item.mubble.chocolate_crepe": "Chocolade crêpe",
 	"item.mubble.caramel_crepe": "Karamel crêpe",
-	"//item.mubble.honey_crepe": "Honey Crêpe",
-	"//item.mubble.sweet_berry_crepe": "Sweet Berry Crêpe",
-	"//item.mubble.blueberry_crepe": "Blueberry Crêpe",
+	"item.mubble.honey_crepe": "Honing crêpe",
+	"item.mubble.sweet_berry_crepe": "Zoetebessen crêpe",
+	"item.mubble.blueberry_crepe": "Blauwebessen crêpe",
 	"item.mubble.candy_cane": "Zuurstok",
 	"item.mubble.burger": "Burger",
 	"item.mubble.tomato": "Tomaat",
@@ -942,7 +942,7 @@
 	"item.mubble.music_disc_electroplankton_medley.desc": "Electroplankton Medley (SBBU)",
 	"item.mubble.music_disc_fields_of_hopes_and_dreams.desc": "DELTARUNE - Fields of Hopes and Dreams",
 	"item.mubble.music_disc_kass_theme.desc": "The Legend of Zelda: Breath of the Wild - Kass' Theme (SSBU)",
-	"item.mubble.music_disc_lost_painting.desc": "Castlevania: Symphony of the Night - Lost Painting (SSBU)",
+	"item.mubble.music_disc_lost_painting.desc": "kasteelvania: Symphony of the nacht - Lost Painting (SSBU)",
 	"item.mubble.music_disc_mad_mew_mew.desc": "UNDERTALE - Mad Mew Mew",
 	"item.mubble.music_disc_megalovania.desc": "UNDERTALE - Megalovania",
 	"item.mubble.music_disc_popple_battle.desc": "Mario and Luigi: Superstar Saga + Bowser's Minions - Popple Battle",
@@ -953,7 +953,7 @@
 	"item.mubble.music_disc_studiopolis_act1.desc": "Sonic Mania - Studiopolis [Act 1]",
 	"item.mubble.music_disc_the_grand_finale.desc": "Mario & Luigi: Bowser’s Inside Story + Bowser Jr.’s Journey - The Grand Finale",
 	"item.mubble.music_disc_type_a.desc": "Tetris 99 - Type A",
-	"item.mubble.music_disc_vampire_killer.desc": "Castlevania Judgement - Vampire Killer",
+	"item.mubble.music_disc_vampire_killer.desc": "kasteelvania Judgement - Vampire Killer",
 	"item.mubble.music_disc_vs_champion_red_and_blue.desc": "Pokémon Sun & Moon - VS. Champion Red & Blue",
 
 
@@ -963,7 +963,7 @@
 	"item.mubble.remix_disc_nb_harvest_hazards": "Muziekplaat",
 	"item.mubble.remix_disc_nb_sweden": "Muziekplaat",
 	"item.mubble.remix_disc_nb_waluigi_pinball": "Muziekplaat",
-	"item.mubble.remix_disc_nb_beware_the_forest_mushrooms.desc": "Super Mario RPG: Legend of the Seven Stars - Beware the Forest's paddenstoels (NoteBlock Remix)",
+	"item.mubble.remix_disc_nb_beware_the_forest_mushrooms.desc": "Super Mario RPG: Legend of the Seven Stars - Beware the bos's paddenstoels (NoteBlock Remix)",
 	"item.mubble.remix_disc_nb_buoy_base_galaxy.desc": "Super Mario Galaxy - Buoy Base Galaxy (NoteBlock Remix)",
 	"item.mubble.remix_disc_nb_fly_octo_fly.desc": "Splatoon 2 - Fly Octo Fly (NoteBlock Remix)",
 	"item.mubble.remix_disc_nb_harvest_hazards.desc": "Donkey Kong Country: Tropical Freeze - Harvest Hazards (NoteBlock Remix)",
@@ -998,14 +998,14 @@
 	"item.mubble.pink_gold_peach_crown": "Rozegouden Peach's kroon",
 	"item.mubble.super_crown": "Superkroon",
 	"item.mubble.mario_wedding_hat": "Mario's trouwdag hoed",
-	"//item.mubble.boo_hat": "Boo Hat",
+	"item.mubble.boo_hat": "Boo hoed",
 	"item.mubble.broque_monsieur_head": "Broque Monsieur's hoofd",
 
 
 	"item.mubble.bandana": "Bandana",
 
 
-	"//item.mubble.pikachu_ears": "Pikachu Ears",
+	"item.mubble.pikachu_ears": "Pikachu ooren",
 	"item.mubble.snorlax_hat": "Snorlax hoed",
 
 
@@ -1031,8 +1031,8 @@
 
 
 	"comment": "CONTAINERS",
-	"//container.mubble.placer": "Placer",
-	"//container.mubble.timeswap_table": "Timeswap Table",
+	"container.mubble.placer": "Plaatser",
+	"container.mubble.timeswap_table": "Tijdwisselstafel",
 
 
 
@@ -1069,7 +1069,7 @@
 	"subtitles.mubble.block.question_block.loot.power_up": "?-blok laat power up vallen",
 	"subtitles.mubble.block.question_block.loot.coin": "?-blok laat munt vallen",
 	"subtitles.mubble.block.note_block.jump": "Nootblock wordt gebruikt",
-	"//subtitles.mubble.block.door.key.success": "Key used",
+	"subtitles.mubble.block.door.key.success": "Sleutel gebruikt",
 	"subtitles.mubble.block.spring.trigger": "Veer geactiveerd",
 	"subtitles.mubble.item.cape_feather.use": "Capeveer wordt gebruikt",
 	"subtitles.mubble.item.smash_ball.use": "Smash bal wordt gebruikt",
@@ -1109,8 +1109,8 @@
 	"advancements.mubble.get_all_caps.description": "Verkrijg alle petten",
 	"advancements.mubble.get_vanadium.title": "Vanadiums!",
 	"advancements.mubble.get_vanadium.description": "Verkrijg vanadiums",
-	"//advancements.mubble.get_timeswap_table.title": "Retroactive",
-	"//advancements.mubble.get_timeswap_table.description": "Craft a Timeswap Table",
+	"advancements.mubble.get_timeswap_table.title": "Retroactief",
+	"advancements.mubble.get_timeswap_table.description": "Maak een tijdwisselstafel",
 	"advancements.mubble.get_tetris_block.title": "Het is allemaal verbonden",
 	"advancements.mubble.get_tetris_block.description": "Krijg je handen aan een Tetris blok",
 
