Fixed some stuff

--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -525,7 +525,7 @@
 	"block.mubble.salad": "Salade",
 	"block.mubble.blueberry_bush": "Buisson à myrtilles",
 	"block.mubble.cheese_block": "Bloc de fromage",
-	"//block.mubble.chocolate_cake": "Chocolate Cake",
+	"block.mubble.chocolate_cake": "Gâteau au chocolat",
 	"block.mubble.minecraft_10th_anniversary_cake": "Gâteau d'anniversaire des 10 ans de Minecraft",
 
 	"block.mubble.blue_balloon": "Ballon bleu",
