Updated the German translation strings

--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -525,7 +525,7 @@
 	"block.mubble.salad": "Salat",
 	"block.mubble.cheese_block": "Käseblock",
 	"block.mubble.blueberry_bush": "Blaubeerenstrauch",
-	"//block.mubble.chocolate_cake": "Chocolate Cake",
+	"block.mubble.chocolate_cake": "Schokoladenkuchen",
 	"block.mubble.minecraft_10th_anniversary_cake": "Minecrafts Torte zum 10-jährigen Jubiläum",
 
 	"block.mubble.blue_balloon": "Blauer Luftballon",
@@ -604,16 +604,16 @@
 	"block.mubble.smb3_snow_ground_block": "Bodenblock (SMB3 - Schnee)",
 	"block.mubble.smb3_night_snow_ground_block": "Bodenblock (SMB3 - Schnee des Nachts)",
 	"block.mubble.smb3_sky_ground_block": "Bodenblock (SMB3 - Himmel)",
-	"//block.mubble.nsmbu_ground_ground_block": "Ground Block (NSMBU - Ground)",
-	"//block.mubble.nsmbu_underground_ground_block": "Ground Block (NSMBU - Underground)",
-	"//block.mubble.nsmbu_underwater_ground_block": "Ground Block (NSMBU - Underwater)",
-	"//block.mubble.nsmbu_ghost_house_ground_block": "Ground Block (NSMBU - Ghost House)",
-	"//block.mubble.nsmbu_castle_ground_block": "Ground Block (NSMBU - Castle)",
-	"//block.mubble.nsmbu_desert_ground_block": "Ground Block (NSMBU - Desert)",
-	"//block.mubble.nsmbu_forest_ground_block": "Ground Block (NSMBU - Forest)",
-	"//block.mubble.nsmbu_snow_ground_block": "Ground Block (NSMBU - Snow)",
-	"//block.mubble.nsmbu_night_snow_ground_block": "Ground Block (NSMBU - Night Snow)",
-	"//block.mubble.nsmbu_sky_ground_block": "Ground Block (NSMBU - Sky)",
+	"block.mubble.nsmbu_ground_ground_block": "Bodenblock (NSMBU - Gelände)",
+	"block.mubble.nsmbu_underground_ground_block": "Bodenblock (NSMBU - Untergrund)",
+	"block.mubble.nsmbu_underwater_ground_block": "Bodenblock (NSMBU - Unterwasser)",
+	"block.mubble.nsmbu_ghost_house_ground_block": "Bodenblock (NSMBU - Geisterhaus)",
+	"block.mubble.nsmbu_castle_ground_block": "Bodenblock (NSMBU - Burg)",
+	"block.mubble.nsmbu_desert_ground_block": "Bodenblock (NSMBU - Wüste)",
+	"block.mubble.nsmbu_forest_ground_block": "Bodenblock (NSMBU - Wald)",
+	"block.mubble.nsmbu_snow_ground_block": "Bodenblock (NSMBU - Schnee)",
+	"block.mubble.nsmbu_night_snow_ground_block": "Bodenblock (NSMBU - Schnee des Nachts)",
+	"block.mubble.nsmbu_sky_ground_block": "Bodenblock (NSMBU - Himmel)",
 	"block.mubble.smb_empty_block": "Leerer Block (SMB)",
 	"block.mubble.smb3_empty_block": "Leerer Block (SMB3)",
 	"block.mubble.smw_empty_block": "Leerer Block (SMW)",
