--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -981,22 +981,22 @@
 	"comment": "COSTUMES",
 	"item.mubble.headphones": "Koptelefoon",
 
-	"//item.mubble.white_virtual_googles": "White Virtual Googles",
-	"//item.mubble.light_gray_virtual_googles": "Light Gray Virtual Googles",
-	"//item.mubble.gray_virtual_googles": "Gray Virtual Googles",
-	"//item.mubble.black_virtual_googles": "Black Virtual Googles",
-	"//item.mubble.brown_virtual_googles": "Brown Virtual Googles",
-	"//item.mubble.red_virtual_googles": "Red Virtual Googles",
-	"//item.mubble.orange_virtual_googles": "Orange Virtual Googles",
-	"//item.mubble.yellow_virtual_googles": "Yellow Virtual Googles",
-	"//item.mubble.lime_virtual_googles": "Lime Virtual Googles",
-	"//item.mubble.green_virtual_googles": "Green Virtual Googles",
-	"//item.mubble.cyan_virtual_googles": "Cyan Virtual Googles",
-	"//item.mubble.light_blue_virtual_googles": "Light Blue Virtual Googles",
-	"//item.mubble.blue_virtual_googles": "Blue Virtual Googles",
-	"//item.mubble.purple_virtual_googles": "Purple Virtual Googles",
-	"//item.mubble.magenta_virtual_googles": "Magenta Virtual Googles",
-	"//item.mubble.pink_virtual_googles": "Pink Virtual Googles",
+	"item.mubble.white_virtual_googles": "witte virtuele bril",
+	"item.mubble.light_gray_virtual_googles": "Lichtgrijze virtuele bril",
+	"item.mubble.gray_virtual_googles": "Grijze virtuele bril",
+	"item.mubble.black_virtual_googles": "Zwarte virtuele bril",
+	"item.mubble.brown_virtual_googles": "Bruine virtuele bril",
+	"item.mubble.red_virtual_googles": "Rode virtuele bril",
+	"item.mubble.orange_virtual_googles": "Oranje virtuele bril",
+	"item.mubble.yellow_virtual_googles": "Gele virtuele bril",
+	"item.mubble.lime_virtual_googles": "Lichtgroene virtuele bril",
+	"item.mubble.green_virtual_googles": "Groene virtuele bril",
+	"item.mubble.cyan_virtual_googles": "Turquoise virtuele bril",
+	"item.mubble.light_blue_virtual_googles": "Lichtblauwe virtuele bril",
+	"item.mubble.blue_virtual_googles": "Blauwe virtuele bril",
+	"item.mubble.purple_virtual_googles": "Paarse virtuele bril",
+	"item.mubble.magenta_virtual_googles": "Magenta virtuele bril",
+	"item.mubble.pink_virtual_googles": "Roze virtuele bril",
 	
 	"item.mubble.christmas_hat": "Kerstmuts",
 
