--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -981,22 +981,22 @@
 	"comment": "COSTUMES",
 	"item.mubble.headphones": "Kopfhörer",
 
-	"//item.mubble.white_virtual_googles": "White Virtual Googles",
-	"//item.mubble.light_gray_virtual_googles": "Light Gray Virtual Googles",
-	"//item.mubble.gray_virtual_googles": "Gray Virtual Googles",
-	"//item.mubble.black_virtual_googles": "Black Virtual Googles",
-	"//item.mubble.brown_virtual_googles": "Brown Virtual Googles",
-	"//item.mubble.red_virtual_googles": "Red Virtual Googles",
-	"//item.mubble.orange_virtual_googles": "Orange Virtual Googles",
-	"//item.mubble.yellow_virtual_googles": "Yellow Virtual Googles",
-	"//item.mubble.lime_virtual_googles": "Lime Virtual Googles",
-	"//item.mubble.green_virtual_googles": "Green Virtual Googles",
-	"//item.mubble.cyan_virtual_googles": "Cyan Virtual Googles",
-	"//item.mubble.light_blue_virtual_googles": "Light Blue Virtual Googles",
-	"//item.mubble.blue_virtual_googles": "Blue Virtual Googles",
-	"//item.mubble.purple_virtual_googles": "Purple Virtual Googles",
-	"//item.mubble.magenta_virtual_googles": "Magenta Virtual Googles",
-	"//item.mubble.pink_virtual_googles": "Pink Virtual Googles",
+	"item.mubble.white_virtual_googles": "Weiße Virtuelle Brille",
+	"item.mubble.light_gray_virtual_googles": "Hellgraue Virtuelle Brille",
+	"item.mubble.gray_virtual_googles": "Graue Virtuelle Brille",
+	"item.mubble.black_virtual_googles": "Schwarze Virtuelle Brille",
+	"item.mubble.brown_virtual_googles": "Braune Virtuelle Brille",
+	"item.mubble.red_virtual_googles": "Rote Virtuelle Brille",
+	"item.mubble.orange_virtual_googles": "Orange Virtuelle Brille",
+	"item.mubble.yellow_virtual_googles": "Gelbe Virtuelle Brille",
+	"item.mubble.lime_virtual_googles": "Hellgrüne Virtuelle Brille",
+	"item.mubble.green_virtual_googles": "Grüne Virtuelle Brille",
+	"item.mubble.cyan_virtual_googles": "Türkise Virtuelle Brille",
+	"item.mubble.light_blue_virtual_googles": "Hellblaue Virtuelle Brille",
+	"item.mubble.blue_virtual_googles": "Blaue Virtuelle Brille",
+	"item.mubble.purple_virtual_googles": "Violette Virtuelle Brille",
+	"item.mubble.magenta_virtual_googles": "Magenta Virtuelle Brille",
+	"item.mubble.pink_virtual_googles": "Rosa Virtuelle Brille",
 	
 	"item.mubble.christmas_hat": "Weihnachtshut",
 
