--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -1135,22 +1135,22 @@
 
 
 	"comment": "COMMANDS",
-	"//commands.foodbar.add.food.success.single": "Gave %s food points to %s",
-	"//commands.foodbar.add.food.success.multiple": "Gave %s food points to %s entities",
-	"//commands.foodbar.set.food.success.single": "Set %s food points on %s",
-	"//commands.foodbar.set.food.success.multiple": "Set %s food points on %s entities",
-	"//commands.foodbar.add.saturation.success.single": "Gave %s saturation points to %s",
-	"//commands.foodbar.add.saturation.success.multiple": "Gave %s saturation points to %s entities",
-	"//commands.foodbar.set.saturation.success.single": "Set %s saturation points on %s",
-	"//commands.foodbar.set.saturation.success.multiple": "Set %s saturation points on %s entities",
-	"//commands.health.add.success.single": "Gave %s health points to %s",
-	"//commands.health.add.success.multiple": "Gave %s health points to %s entities",
-	"//commands.health.set.success.single": "Set %s health points on %s",
-	"//commands.health.set.success.multiple": "Set %s health points on %s entities",
-	"//commands.motion.add.success.single": "Added %s, %s, %s to the motion of %s",
-	"//commands.motion.add.success.multiple": "Added %s, %s, %s to the motion of %s entities",
-	"//commands.motion.set.success.single": "Set %s, %s, %s to the motion of %s",
-	"//commands.motion.set.success.multiple": "Set %s, %s, %s to the motion of %s entities",
+	"commands.foodbar.add.food.success.single": "Heb %s voetselpunt(en) toegevoegd aan %s",
+	"commands.foodbar.add.food.success.multiple": "Heb %s voetselpunt(en) toegevoegd aan %s entiteiten",
+	"commands.foodbar.set.food.success.single": "Heb voetselpunten naar %s gezet voor %s",
+	"commands.foodbar.set.food.success.multiple": "Heb voetselpunten naar %s gezet voor %s entiteiten",
+	"commands.foodbar.add.saturation.success.single": "Heb %s saturatiepunt(en) toegevoegd aan %s",
+	"commands.foodbar.add.saturation.success.multiple": "Heb %s saturatiepunt(en) toegevoegd aan %s entiteiten",
+	"commands.foodbar.set.saturation.success.single": "Heb saturatiepunten naar %s gezet voor %s",
+	"commands.foodbar.set.saturation.success.multiple": "Heb saturatiepunten naar %s gezet voor %s entiteiten",
+	"commands.health.add.success.single": "Heb %s levelspunt(en) toegevoegd aan %s",
+	"commands.health.add.success.multiple": "Heb %s levelspunt(en) toegevoegd aan %s entiteiten",
+	"commands.health.set.success.single": "Heb levelspunten naar %s gezet voor %s",
+	"commands.health.set.success.multiple": "Heb levelspunten naar %s gezet voor %s entiteiten",
+	"commands.motion.add.success.single": "Heb %s, %s, %s toegevoegd aan de beweging van %s",
+	"commands.motion.add.success.multiple": "Heb %s, %s, %s toegevoegd aan de beweging van %s entiteiten",
+	"commands.motion.set.success.single": "Heb beweging naar %s, %s, %s gezet voor %s",
+	"commands.motion.set.success.multiple": "Heb beweging naar %s, %s, %s gezet voor %s entiteiten",
 
 
 
