--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -57,10 +57,10 @@
 	"block.mubble.permafrost_brick_vertical_slab": "Dalle verticale en briques du Permafrost",
 	"block.mubble.permafrost_brick_fence": "Barrière en briques du Permafrost",
 	"block.mubble.blue_permafrost_bricks": "Briques bleues du Permafrost",
-	"//block.mubble.blue_permafrost_brick_stairs": "Blue Permafrost Brick Stairs",
-	"//block.mubble.blue_permafrost_brick_slab": "Blue Permafrost Brick Slab",
-	"//block.mubble.blue_permafrost_brick_vertical_slab": "Blue Permafrost Brick Vertical Slab",
-	"//block.mubble.blue_permafrost_brick_wall": "Blue Permafrost Brick Wall",
+	"block.mubble.blue_permafrost_brick_stairs": "Escalier en briques bleues du Permafrost",
+	"block.mubble.blue_permafrost_brick_slab": "Dalle en briques bleues du Permafrost",
+	"block.mubble.blue_permafrost_brick_vertical_slab": "Dalle verticale en briques bleues du Permafrost",
+	"block.mubble.blue_permafrost_brick_wall": "Muret en briques bleues du Permafrost",
 	"block.mubble.permafrost_bismuth_ore": "Minerai de bismuth du Permafrost",
 	"block.mubble.frozen_obsidian": "Obsidienne congelée",
 
@@ -507,19 +507,19 @@
 	"block.mubble.gray_concrete_button": "Bouton en béton gris",
 	"block.mubble.black_concrete_button": "Bouton en béton noir",
 
-	"//block.mubble.red_christmas_bauble": "Red Christmas Bauble",
-	"//block.mubble.orange_christmas_bauble": "Orange Christmas Bauble",
-	"//block.mubble.yellow_christmas_bauble": "Yellow Christmas Bauble",
-	"//block.mubble.purple_christmas_bauble": "Purple Christmas Bauble",
-	"//block.mubble.magenta_christmas_bauble": "Magenta Christmas Bauble",
-	"//block.mubble.pink_christmas_bauble": "Pink Christmas Bauble",
-	"//block.mubble.blue_christmas_bauble": "Blue Christmas Bauble",
-	"//block.mubble.light_blue_christmas_bauble": "Light Blue Christmas Bauble",
-	"//block.mubble.white_christmas_bauble": "White Christmas Bauble",
+	"block.mubble.red_christmas_bauble": "Boule de Noël rouge",
+	"block.mubble.orange_christmas_bauble": "Boule de Noël orange",
+	"block.mubble.yellow_christmas_bauble": "Boule de Noël jaune",
+	"block.mubble.purple_christmas_bauble": "Boule de Noël violette",
+	"block.mubble.magenta_christmas_bauble": "Boule de Noël magenta",
+	"block.mubble.pink_christmas_bauble": "Boule de Noël rose",
+	"block.mubble.blue_christmas_bauble": "Boule de Noël bleue",
+	"block.mubble.light_blue_christmas_bauble": "Boule de Noël bleu clair",
+	"block.mubble.white_christmas_bauble": "Boule de Noël blanche",
 
-	"//block.mubble.red_shiny_garland": "Red Shiny Garland",
-	"//block.mubble.silver_shiny_garland": "Silver Shiny Garland",
-	"//block.mubble.gold_shiny_garland": "Gold Shiny Garland",
+	"block.mubble.red_shiny_garland": "Guirlande brillante rouge",
+	"block.mubble.silver_shiny_garland": "Guirlande brillante argentée",
+	"block.mubble.gold_shiny_garland": "Guirlande brillante dorée",
 
 	"block.mubble.footblock": "Bloc de foot",
 	
@@ -916,7 +916,7 @@
 	"item.mubble.mango": "Mangue",
 	"item.mubble.blueberries": "Myrtilles",
 	"item.mubble.jingle_bells": "Grelots",
-	"//item.mubble.small_bulb": "Small Bulb",
+	"item.mubble.small_bulb": "Petite ampoule",
 	"item.mubble.totem_of_ascending": "Totem d'ascendance",
 
 
