--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -1,7 +1,7 @@
 {
 	"comment": "CREATIVE TABS",
 	"itemGroup.costumes": "Kostuums",
-	"//itemGroup.instruments": "Instruments",
+	"itemGroup.instruments": "Instrumenten",
 
 
 
@@ -57,10 +57,10 @@
 	"block.mubble.permafrost_brick_vertical_slab": "Permafrost bakstenen verticale plaat",
 	"block.mubble.permafrost_brick_fence": "Permafrost bakstenen hek",
 	"block.mubble.blue_permafrost_bricks": "Blauwe permafrost bakstenen",
-	"//block.mubble.blue_permafrost_brick_stairs": "Blue Permafrost Brick Stairs",
-	"//block.mubble.blue_permafrost_brick_slab": "Blue Permafrost Brick Slab",
-	"//block.mubble.blue_permafrost_brick_vertical_slab": "Blue Permafrost Brick Vertical Slab",
-	"//block.mubble.blue_permafrost_brick_wall": "Blue Permafrost Brick Wall",
+	"block.mubble.blue_permafrost_brick_stairs": "Blauwe permafrost bakstenentrap",
+	"block.mubble.blue_permafrost_brick_slab": "Blauwe permafrost bakstenenplaat",
+	"block.mubble.blue_permafrost_brick_vertical_slab": "Blauwe permafrost bakstenen verticale plaat",
+	"block.mubble.blue_permafrost_brick_wall": "Blauwe permafrost bakstenenmuur",
 	"block.mubble.permafrost_bismuth_ore": "Permafrost bismutherts",
 	"block.mubble.frozen_obsidian": "Bevroren obsidiaan",
 
@@ -507,19 +507,19 @@
 	"block.mubble.gray_concrete_button": "Grijze betonnen knop",
 	"block.mubble.black_concrete_button": "Zwarte betonnen knop",
 
-	"//block.mubble.red_christmas_bauble": "Red Christmas Bauble",
-	"//block.mubble.orange_christmas_bauble": "Orange Christmas Bauble",
-	"//block.mubble.yellow_christmas_bauble": "Yellow Christmas Bauble",
-	"//block.mubble.purple_christmas_bauble": "Purple Christmas Bauble",
-	"//block.mubble.magenta_christmas_bauble": "Magenta Christmas Bauble",
-	"//block.mubble.pink_christmas_bauble": "Pink Christmas Bauble",
-	"//block.mubble.blue_christmas_bauble": "Blue Christmas Bauble",
-	"//block.mubble.light_blue_christmas_bauble": "Light Blue Christmas Bauble",
-	"//block.mubble.white_christmas_bauble": "White Christmas Bauble",
+	"block.mubble.red_christmas_bauble": "Rode kerstbal",
+	"block.mubble.orange_christmas_bauble": "Orange kerstbal",
+	"block.mubble.yellow_christmas_bauble": "Gele kerstbal",
+	"block.mubble.purple_christmas_bauble": "Paarse kerstbal",
+	"block.mubble.magenta_christmas_bauble": "Magenta kerstbal",
+	"block.mubble.pink_christmas_bauble": "Roze kerstbal",
+	"block.mubble.blue_christmas_bauble": "Blauwe kerstbal",
+	"block.mubble.light_blue_christmas_bauble": "Lichtblauwe kerstbal",
+	"block.mubble.white_christmas_bauble": "Witte kerstbal",
 
-	"//block.mubble.red_shiny_garland": "Red Shiny Garland",
-	"//block.mubble.silver_shiny_garland": "Silver Shiny Garland",
-	"//block.mubble.gold_shiny_garland": "Gold Shiny Garland",
+	"block.mubble.red_shiny_garland": "Rode glanzende slinger",
+	"block.mubble.silver_shiny_garland": "Zilvere glanzende slinger",
+	"block.mubble.gold_shiny_garland": "Goude glanzende slinger",
 
 	"block.mubble.footblock": "Voetblok",
 	
@@ -915,8 +915,8 @@
 	"item.mubble.apricot": "Abrikoos",
 	"item.mubble.mango": "Mango",
 	"item.mubble.blueberries": "Blauwebessen",
-	"//item.mubble.jingle_bells": "Jingle Bells",
-	"//item.mubble.small_bulb": "Small Bulb",
+	"item.mubble.jingle_bells": "Jingle bellen",
+	"item.mubble.small_bulb": "Kleine lamp",
 	"item.mubble.totem_of_ascending": "Totem der opstijging",
 
 
@@ -1111,7 +1111,7 @@
 	"subtitles.mubble.block.door.key.success": "Sleutel gebruikt",
 	"subtitles.mubble.block.spring.trigger": "Veer geactiveerd",
 	"subtitles.mubble.item.cape_feather.use": "Capeveer wordt gebruikt",
-	"//subtitles.mubble.item.jingle_bells.use": "Jingle Bells used",
+	"subtitles.mubble.item.jingle_bells.use": "Jingle bellen worden gebruikt",
 	"subtitles.mubble.item.smash_ball.use": "Smash bal wordt gebruikt",
 	"subtitles.mubble.costume.cappy.ambient": "Cappy mompelt",
 	"subtitles.mubble.costume.cappy.ambient.nether": "Cappy raakt op",
