--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -1072,6 +1072,7 @@
 	"comment": "CONTAINERS",
 	"container.mubble.placer": "Placeur",
 	"container.mubble.timeswap_table": "Table d'échange temporel",
+	"//container.mubble.present": "Present",
 
 
 
