--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -1072,6 +1072,7 @@
 	"comment": "CONTAINERS",
 	"container.mubble.placer": "Plaatser",
 	"container.mubble.timeswap_table": "Tijdwisselstafel",
+	"//container.mubble.present": "Present",
 
 
 
