--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -1072,6 +1072,7 @@
 	"comment": "CONTAINERS",
 	"//container.mubble.placer": "Placer",
 	"//container.mubble.timeswap_table": "Timeswap Table",
+	"//container.mubble.present": "Present",
 
 
 
