--- a/src/main/resources/assets/mubble/lang/es_es.json
+++ b/src/main/resources/assets/mubble/lang/es_es.json
@@ -521,6 +521,9 @@
 	"//block.mubble.silver_shiny_garland": "Silver Shiny Garland",
 	"//block.mubble.gold_shiny_garland": "Gold Shiny Garland",
 
+	"//block.mubble.red_present": "Red Present",
+	"//block.mubble.green_present": "Green Present",
+
 	"block.mubble.footblock": "Futbloque",
 
 	"//block.mubble.blue_cloud_block": "Blue Cloud Block",
