--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -521,6 +521,9 @@
 	"block.mubble.silver_shiny_garland": "Zilvere glanzende slinger",
 	"block.mubble.gold_shiny_garland": "Goude glanzende slinger",
 
+	"//block.mubble.red_present": "Red Present",
+	"//block.mubble.green_present": "Green Present",
+
 	"block.mubble.footblock": "Voetblok",
 	
 	"block.mubble.blue_cloud_block": "Blauwewolkblok",
