Added Blue and Yellow Presents

--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -589,8 +589,10 @@
 	"block.mubble.silver_shiny_garland": "Guirlande brillante argentée",
 	"block.mubble.gold_shiny_garland": "Guirlande brillante dorée",
 
-	"block.mubble.red_present": "Cadeau rouge",
+	"block.mubble.blue_present": "Cadeau bleu",
 	"block.mubble.green_present": "Cadeau vert",
+	"block.mubble.yellow_present": "Cadeau jaune",
+	"block.mubble.red_present": "Cadeau rouge",
 
 	"block.mubble.footblock": "Bloc de foot",
 	
