--- a/src/main/resources/assets/mubble/lang/lol_us.json
+++ b/src/main/resources/assets/mubble/lang/lol_us.json
@@ -589,8 +589,10 @@
 	"//block.mubble.silver_shiny_garland": "Silver Shiny Garland",
 	"//block.mubble.gold_shiny_garland": "Gold Shiny Garland",
 
-	"//block.mubble.red_present": "Red Present",
+	"//block.mubble.blue_present": "Blue Present",
 	"//block.mubble.green_present": "Green Present",
+	"//block.mubble.yellow_present": "Yellow Present",
+	"//block.mubble.red_present": "Red Present",
 
 	"block.mubble.footblock": "SOCCEEEbloc",
 	
