--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -583,6 +583,7 @@
 	"block.mubble.pink_christmas_bauble": "Boule de Noël rose",
 	"block.mubble.blue_christmas_bauble": "Boule de Noël bleue",
 	"block.mubble.light_blue_christmas_bauble": "Boule de Noël bleu clair",
+	"block.mubble.green_christmas_bauble": "Boule de Noël verte",
 	"block.mubble.white_christmas_bauble": "Boule de Noël blanche",
 
 	"block.mubble.red_shiny_garland": "Guirlande brillante rouge",
@@ -968,6 +969,12 @@
 	"item.mubble.vanadium": "Vanadium",
 	"item.mubble.bismuth_dust": "Poudre de bismuth",
 	"item.mubble.crystallized_bismuth": "Bismuth cristallisé",
+	"//item.mubble.bismuth_sword": "Bismuth Sword",
+	"//item.mubble.bismuth_shovel": "Bismuth Shovel",
+	"//item.mubble.bismuth_pickaxe": "Bismuth Pickaxe",
+	"//item.mubble.bismuth_axe": "Bismuth Axe",
+	"//item.mubble.bismuth_hoe": "Bismuth Hoe",
+	"//item.mubble.diamond_stick": "Diamond Stick",
 	"item.mubble.permafrost_brick": "Brique du Permafrost",
 	"item.mubble.bandage": "Bandage",
 	"item.mubble.wheat_flour": "Farine de blé",
