--- a/src/main/resources/assets/mubble/lang/lol_us.json
+++ b/src/main/resources/assets/mubble/lang/lol_us.json
@@ -583,6 +583,7 @@
 	"//block.mubble.pink_christmas_bauble": "Pink Christmas Bauble",
 	"//block.mubble.blue_christmas_bauble": "Blue Christmas Bauble",
 	"//block.mubble.light_blue_christmas_bauble": "Light Blue Christmas Bauble",
+	"//block.mubble.green_christmas_bauble": "Green Christmas Bauble",
 	"//block.mubble.white_christmas_bauble": "White Christmas Bauble",
 
 	"//block.mubble.red_shiny_garland": "Red Shiny Garland",
@@ -968,6 +969,12 @@
 	"item.mubble.vanadium": "shiny purple",
 	"//item.mubble.bismuth_dust": "Bismuth Dust",
 	"//item.mubble.crystallized_bismuth": "Crystallized Bismuth",
+	"//item.mubble.bismuth_sword": "Bismuth Sword",
+	"//item.mubble.bismuth_shovel": "Bismuth Shovel",
+	"//item.mubble.bismuth_pickaxe": "Bismuth Pickaxe",
+	"//item.mubble.bismuth_axe": "Bismuth Axe",
+	"//item.mubble.bismuth_hoe": "Bismuth Hoe",
+	"//item.mubble.diamond_stick": "Diamond Stick",
 	"//item.mubble.permafrost_brick": "Permafrost Brick",
 	"item.mubble.bandage": "banaj",
 	"item.mubble.wheat_flour": "wet floor",
