--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -583,6 +583,7 @@
 	"block.mubble.pink_christmas_bauble": "Roze kerstbal",
 	"block.mubble.blue_christmas_bauble": "Blauwe kerstbal",
 	"block.mubble.light_blue_christmas_bauble": "Lichtblauwe kerstbal",
+	"//block.mubble.green_christmas_bauble": "Green Christmas Bauble",
 	"block.mubble.white_christmas_bauble": "Witte kerstbal",
 
 	"block.mubble.red_shiny_garland": "Rode glanzende slinger",
@@ -968,6 +969,12 @@
 	"item.mubble.vanadium": "Vanadium",
 	"item.mubble.bismuth_dust": "Bismuthstof",
 	"item.mubble.crystallized_bismuth": "Gekristalliseerde bismuth",
+	"//item.mubble.bismuth_sword": "Bismuth Sword",
+	"//item.mubble.bismuth_shovel": "Bismuth Shovel",
+	"//item.mubble.bismuth_pickaxe": "Bismuth Pickaxe",
+	"//item.mubble.bismuth_axe": "Bismuth Axe",
+	"//item.mubble.bismuth_hoe": "Bismuth Hoe",
+	"//item.mubble.diamond_stick": "Diamond Stick",
 	"item.mubble.permafrost_brick": "Permafrostbaksteen",
 	"item.mubble.bandage": "Verband",
 	"item.mubble.wheat_flour": "Tarwemeel",
